# TaskRLT

./: .gitignore  agregator_test.py  main.py  pyproject.toml  test.py
handlers/: agregators.py  commands.py
settings/: config.py  settings.ini
tools/: db_agregator.py
