[tool.poetry]
name = "taskrlt"
version = "0.1.0"
description = ""
authors = ["Unti1 <kostyuchenko.work@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
motor = "^3.3.2"
aiogram = "^3.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
